Make container scroll behind fixed header

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -5,6 +5,7 @@
 }
 
 header {
+	z-index: 1;
 	position: fixed;
 	background-color: #ffffff;
 	top: 0;
@@ -37,6 +38,7 @@ header {
 }
 
 .container {
+	z-index: -1;
 	width: 100%;
 	border: 1px solid black;
 	margin-top: 100px;
